Adesso i dati non sono presenti direttamente sul codice, ma sono su un file esterno.

--- a/AWSLambda2/AWSLambda2.csproj
+++ b/AWSLambda2/AWSLambda2.csproj
@@ -17,4 +17,7 @@
     <PackageReference Include="System.Collections" Version="4.3.0" />
     <PackageReference Include="System.Reflection.Metadata" Version="6.0.0" />
   </ItemGroup>
+    <ItemGroup>
+    <None Include="Connection.txt" />
+  </ItemGroup>
 </Project>
