--- a/AWSLambda2/AWSLambda2.csproj
+++ b/AWSLambda2/AWSLambda2.csproj
@@ -18,6 +18,8 @@
     <PackageReference Include="System.Reflection.Metadata" Version="6.0.0" />
   </ItemGroup>
     <ItemGroup>
-    <None Include="Connection.txt" />
+    <None Include="Connection.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
